tests/paczka1/small_fuzzy/48980427.err
Error in line 6: zxTIjNWrW S60 42,0
Error in line 10: sQTs9Binrh S503 21,6
